--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ html{
 body{
         width: 100%;
         height: 100%;
-        background: url("img/sitebg.jpg") no-repeat center fixed ;
+        background: url("https://ahmadammmoura.github.io/a-guessing-game/img/sitebg.jpg") no-repeat center fixed ;
         background-size: cover;
 }
 header h1{
